--- a/WhileIterations/WhileIterations.csproj
+++ b/WhileIterations/WhileIterations.csproj
@@ -36,7 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Values.txt">
+    <None Include="Values1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
